--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
             <input type="text" class="search__input" value="Spider-man" placeholder="Write...">
             <button class="search__button">Search</button>
         </div>
-        <div class="result"></div>
+        <div class="result">
+           <div class="result__main">
+            <img src="" alt="" 
+            class="result__img">
+            <div class="result__descript">
+                <div class="result__name">The Dark</div>
+                <div class="result__est">
+                    <img src="" alt="" class="est-img">
+                    <p class="est-text">9.5</p>
+                </div>
+                <div class="details">
+                    <span class="details__text">5</span>
+                    <span class="details__text">5</span>
+                    <span class="details__text">5</span>
+                </div>
+                <div class="genre">
+                    <div class="genre__item">Anime</div>
+                </div>
+            </div>
+            <span class="plot">Plot: </span>
+            <span class="cast">Cast: </span>
+           </div>
+        </div>
     </div>
 
     <script src="js/main.js"></script>
