Delte hard code

--- a/index.html
+++ b/index.html
@@ -4,37 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies App</title>
+    <script src="https://kit.fontawesome.com/a27a0b0318.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <div class="container">
         <div class="search">
-            <input type="text" class="search__input" value="Spider-man" placeholder="Write...">
+            <input type="text" class="search__input" value="Spider-man" placeholder="Movie...">
             <button class="search__button">Search</button>
         </div>
-        <div class="result">
-           <div class="result__main">
-            <img src="" alt="" 
-            class="result__img">
-            <div class="result__descript">
-                <div class="result__name">The Dark</div>
-                <div class="result__est">
-                    <img src="" alt="" class="est-img">
-                    <p class="est-text">9.5</p>
-                </div>
-                <div class="details">
-                    <span class="details__text">5</span>
-                    <span class="details__text">5</span>
-                    <span class="details__text">5</span>
-                </div>
-                <div class="genre">
-                    <div class="genre__item">Anime</div>
-                </div>
-            </div>
-            <span class="plot">Plot: </span>
-            <span class="cast">Cast: </span>
-           </div>
-        </div>
+        <div class="result"></div>
+            
     </div>
 
     <script src="js/main.js"></script>
